--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                 
                 <img src="/images/logo/ohmyfood.png" alt="logo">
             </div>
+            <div class="loader">
+            </div>
         </header>
         <main>
         <div class="localisation">
