Add 3 pages menu

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                             </a>
                         </article>
                         <article class="card">
+                            <a href="menu_la_note_enchantee.html">
                             <div class="image">
                                 <div class="image__new-badge">Nouveau</div>
                                 <img src="images/restaurants/la_note_enchantee.jpg"
@@ -93,8 +94,10 @@
                                     <i class="fa-solid fa-heart icon--gradient"></i>
                                 </div>
                             </div>
+                        </a>
                         </article>
                         <article class="card">
+                            <a href="menu_a_la_francaise.html">
                             <div class="image">
                                 <img src="images/restaurants/a_la_francaise.jpg"
                                     alt="Image du restaurant À la française">
@@ -111,8 +114,10 @@
                                     <i class="fa-solid fa-heart icon--gradient"></i>
                                 </div>
                             </div>
+                        </a>
                         </article>
                         <article class="card">
+                            <a href="menu_le_delice_des_sens.html">
                             <div class="image">
                                 <img src="images/restaurants/le_delice_des_sens.jpg"
                                     alt="Image du restaurant Le délice des sens">
@@ -129,6 +134,7 @@
                                     <i class="fa-solid fa-heart icon--gradient"></i>
                                 </div>
                             </div>
+                        </a>
                         </article>
                     </div>
                 </div>
