--- a/menu_la_note_enchantee.html
+++ b/menu_la_note_enchantee.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ohmyfood - Menu la palette du goût</title>
+    <title>ohmyfood - Menu la note enchantée</title>
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/abb5f49da8.js" crossorigin="anonymous"></script>
 </head>
@@ -20,19 +20,19 @@
         <main>
             <div class="menu">
                 <div class="menu__image">
-                    <img src="images/restaurants/la_palette_du_gout.jpg" alt="Image restaurant la palette du goût">
+                    <img src="images/restaurants/la_note_enchantee.jpg" alt="Image restaurant la note enchantée">
                 </div>
                 <div class="menu__container">
                     <div class="menu__list">
                         <div class="menu__title">
-                            <h1>La palette du goût</h1>
+                            <h1>La note enchantée</h1>
                             <div class="icon-like">
                                 <i class="fa-regular fa-heart"></i>
                                 <i class="fa-solid fa-heart icon--gradient"></i>
                             </div>
                         </div>
 
-                        <div class="menu__content">
+                        <div class="menu__content menu__content--4cards">
                             <div class="menu__content__title">
                                 <h3>Entrées</h3>
                             </div>
@@ -43,8 +43,8 @@
                                     </div>
                                     <div class="menu__card__container">
                                         <div class="menu__card__content">
-                                            <h2>Fricassée d'escargots</h2>
-                                            <span>Au piment d'Espelette</span>
+                                            <h2>Ravioles de foie gras</h2>
+                                            <span>Accompagnées de leur crème à la truffe</span>
                                         </div>
                                         <div class="menu__card__price">
                                             <h2>25€</h2>
@@ -59,8 +59,8 @@
                                     </div>
                                     <div class="menu__card__container">
                                         <div class="menu__card__content">
-                                            <h2>Foie gras de canard mi-cuit</h2>
-                                            <span>Et ses copeaux de truffe noire</span>
+                                            <h2>Caviar osciètre</h2>
+                                            <span>Sur blini à la farine de blé noir</span>
                                         </div>
                                         <div class="menu__card__price">
                                             <h2>35€</h2>
@@ -74,11 +74,26 @@
                                     </div>
                                     <div class="menu__card__container">
                                         <div class="menu__card__content">
-                                            <h2>Œuf au plat</h2>
-                                            <span>Assaisonné à la truffe sur lit de caviar</span>
+                                            <h2>Homard et espuma de potiron</h2>
+                                            <span>Marinés aux zestes d'orange</span>
                                         </div>
                                         <div class="menu__card__price">
                                             <h2>20€</h2>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="menu__card menu__card">
+                                    <div class="menu__card__icon__check">
+                                        <i class="fa-solid fa-circle-check"></i>
+                                    </div>
+                                    <div class="menu__card__container">
+                                        <div class="menu__card__content">
+                                            <h2>Foie gras de canard cuit entier</h2>
+                                            <span>Confiture de figue et pain toasté</span>
+                                        </div>
+                                        <div class="menu__card__price">
+                                            <h2>35€</h2>
                                         </div>
                                     </div>
                                 </div>
@@ -96,8 +111,8 @@
                                     </div>
                                     <div class="menu__card__container">
                                         <div class="menu__card__content">
-                                            <h2>Filet de bœuf aux herbes</h2>
-                                            <span>Accompagné de sa ribambelle de légumes</span>
+                                            <h2>Noix de coquilles Saint-Jacques</h2>
+                                            <span>Sur lit de purée de céleri-rave</span>
                                         </div>
                                         <div class="menu__card__price">
                                             <h2>40€</h2>
@@ -112,8 +127,8 @@
                                     </div>
                                     <div class="menu__card__container">
                                         <div class="menu__card__content">
-                                            <h2>Parmentier de queue de bœuf</h2>
-                                            <span>À la truffe noire sur sa purée de panais</span>
+                                            <h2>Langoustine poêlée</h2>
+                                            <span>Purée de patate douce</span>
                                         </div>
                                         <div class="menu__card__price">
                                             <h2>35€</h2>
@@ -127,11 +142,11 @@
                                     </div>
                                     <div class="menu__card__container">
                                         <div class="menu__card__content">
-                                            <h2>Filet de turbot</h2>
-                                            <span>Aux agrumes</span>
+                                            <h2>Mijoté de queue de bœuf</h2>
+                                            <span>Et riz sauvage aux zestes de citron</span>
                                         </div>
                                         <div class="menu__card__price">
-                                            <h2>44€</h2>
+                                            <h2>45€</h2>
                                         </div>
                                     </div>
                                 </div>
@@ -148,8 +163,8 @@
                                     </div>
                                     <div class="menu__card__container">
                                         <div class="menu__card__content">
-                                            <h2>Paris-Brest</h2>
-                                            <span>Revisité</span>
+                                            <h2>Macaron noisette et chocolat</h2>
+                                            <span>Glace au caramel brun et sel de Guérande</span>
                                         </div>
                                         <div class="menu__card__price">
                                             <h2>18€</h2>
@@ -164,8 +179,8 @@
                                     </div>
                                     <div class="menu__card__container">
                                         <div class="menu__card__content">
-                                            <h2>Macaron au chocolat d'exception</h2>
-                                            <span>Et glace à la vanille de Madagascar</span>
+                                            <h2>Baba au rhum revisité</h2>
+                                            <span>Avec son coulis de citron</span>
                                         </div>
                                         <div class="menu__card__price">
                                             <h2>22€</h2>
@@ -179,8 +194,8 @@
                                     </div>
                                     <div class="menu__card__container">
                                         <div class="menu__card__content">
-                                            <h2>Mousse au chocolat</h2>
-                                            <span>Au piment d'Espelette et à la truffe noire</span>
+                                            <h2>Tarte au citron meringuée</h2>
+                                            <span>Déstructurée</span>
                                         </div>
                                         <div class="menu__card__price">
                                             <h2>23€</h2>
