--- a/menu_le_delice_des_sens.html
+++ b/menu_le_delice_des_sens.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ohmyfood - Menu la palette du goût</title>
+    <title>ohmyfood - Menu Le délice des sens</title>
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/abb5f49da8.js" crossorigin="anonymous"></script>
 </head>
@@ -20,12 +20,12 @@
         <main>
             <div class="menu">
                 <div class="menu__image">
-                    <img src="images/restaurants/la_palette_du_gout.jpg" alt="Image restaurant la palette du goût">
+                    <img src="images/restaurants/le_delice_des_sens.jpg" alt="Image restaurant Le délice des sens">
                 </div>
                 <div class="menu__container">
                     <div class="menu__list">
                         <div class="menu__title">
-                            <h1>La palette du goût</h1>
+                            <h1>Le délice des sens</h1>
                             <div class="icon-like">
                                 <i class="fa-regular fa-heart"></i>
                                 <i class="fa-solid fa-heart icon--gradient"></i>
@@ -43,8 +43,8 @@
                                     </div>
                                     <div class="menu__card__container">
                                         <div class="menu__card__content">
-                                            <h2>Fricassée d'escargots</h2>
-                                            <span>Au piment d'Espelette</span>
+                                            <h2>Tartare de thon</h2>
+                                            <span>Assaisonné au yuzu</span>
                                         </div>
                                         <div class="menu__card__price">
                                             <h2>25€</h2>
@@ -59,8 +59,8 @@
                                     </div>
                                     <div class="menu__card__container">
                                         <div class="menu__card__content">
-                                            <h2>Foie gras de canard mi-cuit</h2>
-                                            <span>Et ses copeaux de truffe noire</span>
+                                            <h2>Bouchée de homard croustillant</h2>
+                                            <span>Et sa farandole de petits légumes</span>
                                         </div>
                                         <div class="menu__card__price">
                                             <h2>35€</h2>
@@ -74,11 +74,11 @@
                                     </div>
                                     <div class="menu__card__container">
                                         <div class="menu__card__content">
-                                            <h2>Œuf au plat</h2>
-                                            <span>Assaisonné à la truffe sur lit de caviar</span>
+                                            <h2>Poulet rôti aux herbes de Provence</h2>
+                                            <span>Et sa crème de truffe</span>
                                         </div>
                                         <div class="menu__card__price">
-                                            <h2>20€</h2>
+                                            <h2>40€</h2>
                                         </div>
                                     </div>
                                 </div>
@@ -96,8 +96,8 @@
                                     </div>
                                     <div class="menu__card__container">
                                         <div class="menu__card__content">
-                                            <h2>Filet de bœuf aux herbes</h2>
-                                            <span>Accompagné de sa ribambelle de légumes</span>
+                                            <h2>Poulet rôti aux herbes de Provence</h2>
+                                            <span>Et sa crème de truffe</span>
                                         </div>
                                         <div class="menu__card__price">
                                             <h2>40€</h2>
@@ -112,8 +112,8 @@
                                     </div>
                                     <div class="menu__card__container">
                                         <div class="menu__card__content">
-                                            <h2>Parmentier de queue de bœuf</h2>
-                                            <span>À la truffe noire sur sa purée de panais</span>
+                                            <h2>Langouste rôtie</h2>
+                                            <span>Et ses légumes de saison</span>
                                         </div>
                                         <div class="menu__card__price">
                                             <h2>35€</h2>
@@ -127,8 +127,8 @@
                                     </div>
                                     <div class="menu__card__container">
                                         <div class="menu__card__content">
-                                            <h2>Filet de turbot</h2>
-                                            <span>Aux agrumes</span>
+                                            <h2>Côte de bœuf Angus</h2>
+                                            <span>Et sa purée de panais</span>
                                         </div>
                                         <div class="menu__card__price">
                                             <h2>44€</h2>
@@ -148,11 +148,11 @@
                                     </div>
                                     <div class="menu__card__container">
                                         <div class="menu__card__content">
-                                            <h2>Paris-Brest</h2>
-                                            <span>Revisité</span>
+                                            <h2>Œuf au plat</h2>
+                                            <span>Assaisonné à la truffe sur lit de caviar</span>
                                         </div>
                                         <div class="menu__card__price">
-                                            <h2>18€</h2>
+                                            <h2>76€</h2>
                                         </div>
                                     </div>
 
@@ -164,8 +164,8 @@
                                     </div>
                                     <div class="menu__card__container">
                                         <div class="menu__card__content">
-                                            <h2>Macaron au chocolat d'exception</h2>
-                                            <span>Et glace à la vanille de Madagascar</span>
+                                            <h2>Crème brulée</h2>
+                                            <span>Revisitée</span>
                                         </div>
                                         <div class="menu__card__price">
                                             <h2>22€</h2>
@@ -179,8 +179,8 @@
                                     </div>
                                     <div class="menu__card__container">
                                         <div class="menu__card__content">
-                                            <h2>Mousse au chocolat</h2>
-                                            <span>Au piment d'Espelette et à la truffe noire</span>
+                                            <h2>Tiramisu</h2>
+                                            <span>À la noisette</span>
                                         </div>
                                         <div class="menu__card__price">
                                             <h2>23€</h2>
