--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header>
             <div class="logo">
 
-                <img src="/images/logo/ohmyfood.png" alt="logo">
+                <img src="images/logo/ohmyfood.png" alt="logo">
             </div>
 
         </header>
@@ -146,7 +146,7 @@
     <footer>
         <div class="footer__container">
             <div class="footer__logo">
-                <img src="/images/logo/ohmyfood-white.png" alt="logo">
+                <img src="images/logo/ohmyfood-white.png" alt="logo">
             </div>
             <div class="footer__links">
                 <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
