--- a/menu_a_la_francaise.html
+++ b/menu_a_la_francaise.html
@@ -14,7 +14,7 @@
         <header>
             <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
             <div class="logo ">
-                <img src="/images/logo/ohmyfood.png" alt="logo">
+                <img src="images/logo/ohmyfood.png" alt="logo">
             </div>
         </header>
         <main>
@@ -203,7 +203,7 @@
         <footer>
             <div class="footer__container">
                 <div class="footer__logo">
-                    <img src="/images/logo/ohmyfood-white.png" alt="logo">
+                    <img src="images/logo/ohmyfood-white.png" alt="logo">
                 </div>
                 <div class="footer__links">
                     <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
