--- a/index.html
+++ b/index.html
@@ -10,13 +10,8 @@
 </head>
 
 <body>
-    <div class="loader">
-        <div>
-            <div><span></span></div>
-        </div>
-
-    </div>
-    <div class="container">
+    <div id="loader"></div>
+    <div class="container container--loading">
         <header>
             <div class="logo">
 
@@ -25,9 +20,10 @@
 
         </header>
         <main>
-            <div class="localisation">
-                <i class="fa-solid fa-location-dot"></i>Paris, Belleville
-            </div>
+            <form class="localisation">
+                <i class="fa-solid fa-location-dot"></i>
+                <input type="text" placeholder="Paris, Belleville">
+            </form>
             <div class="info">
                 <h1>Réservez le menu qui
                     vous convient</h1>
@@ -143,7 +139,7 @@
         </main>
     </div>
     
-    <footer>
+    <footer class="footer--loading">
         <div class="footer__container">
             <div class="footer__logo">
                 <img src="images/logo/ohmyfood-white.png" alt="logo">
